--- a/.github/workflows/devel.docker.yml
+++ b/.github/workflows/devel.docker.yml
@@ -8,7 +8,7 @@ on:
     - trying
 
 env:
-  DOCKER_IMAGE: localhost:5000/github.com/static-web-server/static-web-server
+  DOCKER_IMAGE: ghcr.io/pl4nty/static-web-server
 
 jobs:
   docker-alpine:
@@ -22,6 +22,9 @@ jobs:
           - linux/arm/v7
           - linux/arm/v6
     runs-on: ubuntu-20.04
+    permissions:
+      packages: write
+      contents: read
     services:
       registry:
         image: registry:2
