--- a/.github/workflows/devel.docker.yml
+++ b/.github/workflows/devel.docker.yml
@@ -50,6 +50,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+      - 
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       -
         name: Cache Docker layers
         uses: actions/cache@v3
