ci: remove matrix to push multiarch image

--- a/.github/workflows/devel.docker.yml
+++ b/.github/workflows/devel.docker.yml
@@ -13,14 +13,6 @@ env:
 jobs:
   docker-alpine:
     name: Docker test
-    strategy:
-      matrix:
-        arch:
-          - linux/amd64
-          - linux/386
-          - linux/arm64
-          - linux/arm/v7
-          - linux/arm/v6
     runs-on: ubuntu-20.04
     permissions:
       packages: write
@@ -52,9 +44,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: static-web-server-${{ matrix.arch }}-buildx-${{ github.sha }}
+          key: static-web-server-buildx-${{ github.sha }}
           restore-keys: |
-            static-web-server-${{ matrix.arch }}-buildx-
+            static-web-server-buildx-
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -95,7 +87,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: ${{ matrix.arch }}
+          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
           file: ${{ env.SERVER_DOCKERFILE }}
           load: true
           tags: ${{ steps.meta_alpine.outputs.tags }}
@@ -107,7 +99,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: ${{ matrix.arch }}
+          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
           file: ${{ env.SERVER_DOCKERFILE }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_alpine.outputs.tags }}
