--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -19,7 +19,7 @@ jobs:
         id: meta_alpine
         uses: docker/metadata-action@v3
         with:
-          images: joseluisq/static-web-server
+          images: pl4nty/static-web-server
           flavor: |
             latest=false
             suffix=-alpine
@@ -31,11 +31,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       -
         name: Prepare Docker envs
         shell: bash
@@ -69,7 +70,7 @@ jobs:
         id: meta_scratch
         uses: docker/metadata-action@v3
         with:
-          images: joseluisq/static-web-server
+          images: pl4nty/static-web-server
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -78,11 +79,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       -
         name: Prepare Docker envs
         shell: bash
