ci: add package perms to docker release pipeline

--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -5,6 +5,9 @@ on:
 
 jobs:
   docker-image-alpine:
+    permissions:
+      packages: write
+      contents: read
     runs-on: ubuntu-20.04
     if: contains(github.ref, 'v2.')
     steps:
