--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta_alpine
         uses: docker/metadata-action@v4
         with:
-          images: pl4nty/static-web-server
+          images: ghcr.io/pl4nty/static-web-server
           flavor: |
             latest=false
             suffix=-alpine
@@ -85,7 +85,7 @@ jobs:
         id: meta_debian
         uses: docker/metadata-action@v4
         with:
-          images: pl4nty/static-web-server
+          images: ghcr.io/pl4nty/static-web-server
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
