--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -22,9 +22,7 @@ jobs:
         id: meta_alpine
         uses: docker/metadata-action@v4
         with:
-          images: |
-            joseluisq/static-web-server
-            ghcr.io/static-web-server/static-web-server
+          images: pl4nty/static-web-server
           flavor: |
             latest=false
             suffix=-alpine
@@ -36,11 +34,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       -
         name: Login to ghcr.io
         uses: docker/login-action@v2
@@ -83,12 +82,7 @@ jobs:
         id: meta_debian
         uses: docker/metadata-action@v4
         with:
-          images: |
-            joseluisq/static-web-server
-            ghcr.io/static-web-server/static-web-server
-          flavor: |
-            latest=false
-            suffix=-debian
+          images: pl4nty/static-web-server
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -97,11 +91,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to DockerHub
+        name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       -
         name: Login to ghcr.io
         uses: docker/login-action@v2
