ci: add package perms to docker release pipeline

--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -6,7 +6,10 @@ on:
 
 jobs:
   docker-image-alpine:
-    runs-on: ubuntu-22.04
+    permissions:
+      packages: write
+      contents: read
+    runs-on: ubuntu-20.04
     if: contains(github.ref, 'v2.')
     steps:
       -
