feat: attempt at export to OTLP instead of stdout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ tracing = { version = "0.1", default-features = false, features = ["std"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "registry", "parking_lot", "fmt", "ansi", "tracing-log"] }
 tracing-opentelemetry = "0.18.0"
 opentelemetry = "0.18.0"
+opentelemetry-otlp = "0.11.0"
 
 [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
 version = "0.5"
