--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,9 +84,11 @@ tokio-util = { version = "0.7", default-features = false, features = ["io"] }
 toml = "0.8"
 tracing = { version = "0.1", default-features = false, features = ["std"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "registry", "parking_lot", "fmt", "ansi", "tracing-log"] }
-tracing-opentelemetry = "0.18.0"
-opentelemetry = "0.18.0"
-opentelemetry-otlp = "0.11.0"
+tracing-opentelemetry = "0.22.0"
+opentelemetry-otlp = "0.14.0"
+opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
+tokio-metrics-collector = "0.2.1"
+prometheus = "0.13.3"
 
 [target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
 version = "0.5"
@@ -126,3 +128,6 @@ pre-build = [
     "rm base.tar.xz",
     "rm -rf /tmp/netbsd",
 ]
+
+[build]
+rustflags = ["--cfg", "tokio_unstable"]
