--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = ["s
 tracing-opentelemetry = "0.22.0"
 opentelemetry-otlp = "0.14.0"
 opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
+opentelemetry = "0.21.0"
 tokio-metrics-collector = "0.2.1"
 prometheus = "0.13.3"
 
