fix: align GitHub Actions to upstream
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/devel.docker.yml
+++ b/.github/workflows/devel.docker.yml
@@ -20,7 +20,17 @@ env:
 
 jobs:
   docker-alpine:
-    name: Docker test
+    name: Docker test (alpine)
+    strategy:
+      matrix:
+        arch:
+          - linux/amd64
+          - linux/386
+          - linux/arm64
+          - linux/arm/v7
+          - linux/arm/v6
+          - linux/ppc64le
+          - linux/s390x
     runs-on: ubuntu-20.04
     permissions:
       packages: write
@@ -52,12 +62,24 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: static-web-server-buildx-${{ github.sha }}
+          key: static-web-server-${{ matrix.arch }}-alpine-buildx-${{ github.sha }}
           restore-keys: |
-            static-web-server-buildx-
+            static-web-server-${{ matrix.arch }}-alpine-buildx-
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+      -
+        name: Build and export to Docker client
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: ${{ matrix.arch }}
+          file: ${{ env.SERVER_DOCKERFILE }}
+          load: true
+          tags: ${{ steps.meta_alpine.outputs.tags }}
+          labels: ${{ steps.meta_alpine.outputs.labels }}
+          build-args: |
+            SERVER_VERSION=${{ env.SERVER_VERSION }}
       -
         name: Docker meta alpine
         id: meta_alpine
@@ -95,7 +117,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: ${{ matrix.arch }}
           file: ${{ env.SERVER_DOCKERFILE }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_alpine.outputs.tags }}
