fix: fully disable Windows release
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,22 +139,22 @@ jobs:
           os: macos-12
           rust: stable
           target: aarch64-apple-darwin
-        - build: windows-msvc
-          os: windows-2022
-          rust: stable
-          target: x86_64-pc-windows-msvc
-        - build: windows-msvc-i686
-          os: windows-2022
-          rust: stable
-          target: i686-pc-windows-msvc
-        - build: windows-msvc-arm64
-          os: windows-2022
-          rust: stable
-          target: aarch64-pc-windows-msvc
-        - build: windows-pc-gnu
-          os: windows-2022
-          rust: stable-x86_64-gnu
-          target: x86_64-pc-windows-gnu
+        # - build: windows-msvc
+        #   os: windows-2022
+        #   rust: stable
+        #   target: x86_64-pc-windows-msvc
+        # - build: windows-msvc-i686
+        #   os: windows-2022
+        #   rust: stable
+        #   target: i686-pc-windows-msvc
+        # - build: windows-msvc-arm64
+        #   os: windows-2022
+        #   rust: stable
+        #   target: aarch64-pc-windows-msvc
+        # - build: windows-pc-gnu
+        #   os: windows-2022
+        #   rust: stable-x86_64-gnu
+        #   target: x86_64-pc-windows-gnu
 
     steps:
     - name: Checkout repository
