--- a/.github/workflows/devel.docker.yml
+++ b/.github/workflows/devel.docker.yml
@@ -16,7 +16,7 @@ on:
       - .github/workflows/devel.docker.yml
 
 env:
-  DOCKER_IMAGE: ghcr.io/pl4nty/static-web-server
+  DOCKER_IMAGE: localhost:5000/github.com/pl4nty/static-web-server
 
 jobs:
   docker-alpine:
@@ -32,9 +32,6 @@ jobs:
           - linux/ppc64le
           - linux/s390x
     runs-on: ubuntu-20.04
-    permissions:
-      packages: write
-      contents: read
     services:
       registry:
         image: registry:2
@@ -50,13 +47,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - 
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
       -
         name: Cache Docker layers
         uses: actions/cache@v3
