--- a/.github/workflows/release.docker.yml
+++ b/.github/workflows/release.docker.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   docker-image-alpine:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       packages: write
       contents: read
@@ -25,7 +25,8 @@ jobs:
         id: meta_alpine
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/pl4nty/static-web-server
+          images: |
+            ghcr.io/pl4nty/static-web-server
           flavor: |
             latest=false
             suffix=-alpine
@@ -36,6 +37,12 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Login to ghcr.io
         uses: docker/login-action@v2
@@ -78,7 +85,8 @@ jobs:
         id: meta_debian
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/pl4nty/static-web-server
+          images: |
+            ghcr.io/pl4nty/static-web-server
           flavor: |
             latest=false
             suffix=-debian
@@ -90,12 +98,11 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Login to GitHub Container Registry
+        name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Login to ghcr.io
         uses: docker/login-action@v2
@@ -138,8 +145,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            joseluisq/static-web-server
-            ghcr.io/static-web-server/static-web-server
+            ghcr.io/pl4nty/static-web-server
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
